isEmpty() -> isBlank().